# csh-project-tracker

./: .env.dev  .gitignore  Cargo.toml  README.md
deployments/: development.yml
migrations/2019-09-20-041643_create_projects/: up.sql
src/: app.rs  db.rs  lib.rs  models.rs  schema.rs
src/app/: mod.rs  projects.rs
src/db/: mod.rs  projects.rs
