[package]
name = "csh-project-tracker"
version = "0.1.0"
authors = ["Nick Mosher <nicholastmosher@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.101", features = ["derive"] }
diesel = { version= "1.4.2", features = ["postgres", "r2d2"] }
dotenv = "0.14.1"
actix-web = "1.0.7"
listenfd = "0.3.3"
actix = "0.8.3"
num_cpus = "1.10.1"

[lib]
name = "csh_project_tracker"
path = "src/lib.rs"

[[bin]]
name = "csh-project-tracker"
path = "src/bin/main.rs"
